# scratch-os

./: Cargo.toml  Makefile  README.md  ROADMAP.md  build.rs  rust-toolchain.toml  x86_64-unknown-none.json
.cargo/: config.toml
src/: allocator.rs  boot.S  framebuffer.rs  gdt.rs  grub.cfg  interrupts.rs  linker.ld  main.rs  memory.rs  sync.rs  syscall.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  mod.rs  shell.rs  user.rs
