[package]
name = "scratch-os"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.2.7"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.10"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.10.6"
multiboot2 = "0.24.1"
uart_16550 = "0.2.19"

[build-dependencies]
cc = "1.0"
